--- a/nginx_flask.conf
+++ b/nginx_flask.conf
@@ -1,8 +1,14 @@
 server {
     listen 443 ssl;
     ssl_certificate  /etc/ssl/public.pem;
-    ssl_certificate_key /etcssl/private.key;
+    ssl_certificate_key /etc/ssl/private.key;
     root /app/dist;
+    location /
+    {
+        auth_basic "Please enter your username and password";
+        auth_basic_user_file /home/htpasswd;
+        autoindex on;
+    }
     location /api {
         proxy_pass http://127.0.0.1:5000/;
         proxy_set_header Host $host;
