--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,4 +2,16 @@
 nodaemon=true
 
 [program:gunicorn]
-command=gunicorn --workers=3 run:app -b 127.0.0.1:5000
+command=gunicorn -w4 -b127.0.0.1:5000 run:app
+directory=/app
+startsecs=0
+stopwaitsecs=0
+autostart=true
+autorestart=true
+user=root
+stdout_logfile_maxbytes=100MB
+stdout_logfile_backups=20
+stdout_logfile=/var/log/supervisor/out.log
+stderr_logfile_maxbytes=100MB
+stderr_logfile_backups=20
+stderr_logfile=/var/log/supervisor/err.log
