--- a/supervisord.conf
+++ b/supervisord.conf
@@ -15,3 +15,7 @@ stdout_logfile=/var/log/supervisor/out.log
 stderr_logfile_maxbytes=100MB
 stderr_logfile_backups=20
 stderr_logfile=/var/log/supervisor/err.log
+
+
+[program:nginx]
+command=/usr/sbin/nginx
