--- a/nginx_flask.conf
+++ b/nginx_flask.conf
@@ -8,6 +8,8 @@ server {
     autoindex on;
 
     location /api {
+        proxy_read_timeout 300s;
+        proxy_connect_timeout 100s;
         proxy_pass http://127.0.0.1:5000;
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
